# deepdnd

./: .gitignore  README.md  pyproject.toml
deepdnd/: app.py  documents.py  model.py
tests/: test_app.py  test_model.py
