[tool.poetry]
name = "deepdnd"
version = "0.1.0"
description = ""
authors = ["Isabella Ribeiro <belinhacbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.7"
pytest = "^8.3.4"
langchain = "^0.3.18"
chromadb = "^0.6.3"
gradio = "^5.15.0"
langchain-community = "^0.3.17"
pymupdf = "^1.25.3"
langchain-ollama = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
